--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url('anime-texture.jpg') no-repeat center center/cover;
+    background: url('anime-background.jpg') no-repeat center center/cover;
     color: white;
     text-align: center;
 }
@@ -48,6 +48,34 @@ video {
     background: darkred;
 }
 
+/* Anime Thumbnails */
+.anime-thumbnails {
+    margin-top: 30px;
+}
+
+.anime-list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.anime-item {
+    text-align: center;
+}
+
+.anime-item img {
+    width: 150px;
+    height: 200px;
+    border-radius: 10px;
+    border: 2px solid white;
+}
+
+.anime-item p {
+    margin-top: 5px;
+    font-size: 18px;
+}
+
+/* Bottom Navigation */
 .bottom-nav {
     display: flex;
     justify-content: space-around;
